syntax = "proto3";

package nexusclash.v1;

import "nexusclash/v1/common.proto";

option go_package = "github.com/cheildo/nexus-clash-backend/api/proto/nexusclash/v1;nexusclashv1";

// AuthService handles player registration and authentication.
service AuthService {
  // Registers a new player account.
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // Logs a player in and returns a session token.
  rpc Login(LoginRequest) returns (LoginResponse);
}

// -- Messages for Register RPC --
message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  UUID user_id = 1;
}


// -- Messages for Login RPC --
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  // The session token (e.g., JWT) to be used for authenticated requests.
  string session_token = 1;
}